--- a/index.html
+++ b/index.html
@@ -4,22 +4,62 @@
 <meta charset="UTF-8">
 <title>Lật Bit Gọn Nhẹ</title>
 <style>
-    body {
-        font-family: Arial;
-        text-align: center;
-        margin-top: 40px;
-    }
-    input {
-        padding: 8px;
-        font-size: 18px;
-        width: 180px;
-        text-align: center;
-        margin: 5px;
-    }
+   body {
+    margin: 0;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start; /* đổi từ center thành flex-start */
+    padding-top: 30px;       /* cách mép trên 30px */
+    background: linear-gradient(135deg, #141e30, #243b55);
+    font-family: 'Segoe UI', sans-serif;
+    color: #ffffff;
+}
+
+.container {
+    background: rgba(255, 255, 255, 0.08);
+    padding: 40px;
+    border-radius: 20px;
+    backdrop-filter: blur(15px);
+    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.4);
+    text-align: center;
+    width: 350px;
+    margin-top: 30px;
+}
+
+h2 {
+    margin-bottom: 25px;
+    font-weight: 600;
+    letter-spacing: 1px;
+}
+
+input {
+    padding: 12px;
+    font-size: 18px;
+    width: 100%;
+    text-align: center;
+    margin: 10px 0;
+    border-radius: 12px;
+    border: none;
+    outline: none;
+    background: rgba(255, 255, 255, 0.15);
+    color: #fff;
+    transition: 0.3s ease;
+}
+
+input::placeholder {
+    color: rgba(255, 255, 255, 0.6);
+}
+
+input:focus {
+    background: rgba(255, 255, 255, 0.25);
+    box-shadow: 0 0 15px rgba(0, 200, 255, 0.6);
+    transform: scale(1.03);
+}
 </style>
 </head>
 <body>
-
+<div class="container">
 <h2>Lật Bit</h2>
 
 <div>
@@ -35,6 +75,7 @@
 <div>
     <div>Thứ tự lật (vd: 5,3,1,1,2):</div>
     <input type="text" id="orderInput" value="5,3,1,1,2,4,5,3,1">
+</div>
 </div>
 
 <script>
@@ -84,4 +125,5 @@ function processInput(input) {
 
 </body>
 </html>
+
 
