--- a/index.html
+++ b/index.html
@@ -4,58 +4,69 @@
 <meta charset="UTF-8">
 <title>Lật Bit Gọn Nhẹ</title>
 <style>
-   body {
-    margin: 0;
-    min-height: 100vh;
+* {
+    box-sizing: border-box;
+}
+
+  body {
+    background: linear-gradient(135deg, #1e1e2f, #252542);
+    font-family: Arial, sans-serif;
     display: flex;
     justify-content: center;
-    align-items: flex-start; /* đổi từ center thành flex-start */
-    padding-top: 30px;       /* cách mép trên 30px */
-    background: linear-gradient(135deg, #141e30, #243b55);
-    font-family: 'Segoe UI', sans-serif;
+    padding-top: 40px;
     color: #ffffff;
 }
 
 .container {
-    background: rgba(255, 255, 255, 0.08);
-    padding: 40px;
-    border-radius: 20px;
-    backdrop-filter: blur(15px);
-    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.4);
-    text-align: center;
-    width: 350px;
-    margin-top: 30px;
+    background: rgba(255, 255, 255, 0.05);
+    padding: 30px;
+    border-radius: 16px;
+    width: 320px;
+    box-shadow: 0 15px 35px rgba(0, 0, 0, 0.4);
+    backdrop-filter: blur(8px);
 }
 
 h2 {
-    margin-bottom: 25px;
+    margin-bottom: 20px;
     font-weight: 600;
-    letter-spacing: 1px;
+}
+
+.container div {
+    margin-bottom: 18px;
+    text-align: left;
 }
 
 input {
-    padding: 12px;
-    font-size: 18px;
     width: 100%;
-    text-align: center;
-    margin: 10px 0;
-    border-radius: 12px;
-    border: none;
+    padding: 10px 12px;
+    margin-top: 6px;
+    border-radius: 8px;
+    border: 1px solid #444;
+    background-color: #2b2b3d;   /* nền tối hơn */
+    color: #ffffff;              /* chữ sáng */
+    font-weight: 600;            /* chữ đậm hơn */
+    font-size: 16px;
     outline: none;
-    background: rgba(255, 255, 255, 0.15);
-    color: #fff;
     transition: 0.3s ease;
 }
 
 input::placeholder {
-    color: rgba(255, 255, 255, 0.6);
+    color: #bbbbbb;
+    font-weight: 400;
 }
 
 input:focus {
-    background: rgba(255, 255, 255, 0.25);
-    box-shadow: 0 0 15px rgba(0, 200, 255, 0.6);
-    transform: scale(1.03);
+    background-color: #33334d;
+    border-color: #4da6ff;
+    box-shadow: 0 0 12px rgba(77, 166, 255, 0.6);
 }
+
+
+
+
+
+
+
 </style>
 </head>
 <body>
