--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ button:focus {
 
     <div>
         <div>Thứ tự lật (vd: 5,3,1,1,2):</div>
-        <input type="text" id="orderInput" value="5,3,1,1,2,4,5,3,1">
+        <input type="text" id="orderInput" value="5-3-1-1-2-4-5-3-1-1-2-4-5-2-4-3-1-2-4-2-3-4-2-1-2-4-1-5-3-2-5-3-1-1-2-3">
         <button onclick="applyOrder()">Áp dụng</button>
         <div id="statusMsg" style="margin-top:8px;font-size:14px;"></div>
     </div>
@@ -299,6 +299,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
+
 
 
 
