--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@ input.main {
     font-size: 18px;
     text-align: center;
     border-radius: 10px;
-    border: none;
+    border: 5px;
     outline: none;
     margin-bottom: 15px;
-    background: rgba(255,255,255,0.1);
+    background: red;
     color: white;
 }
 
@@ -277,6 +277,7 @@ function resetInputs(){
 
 </body>
 </html>
+
 
 
 
