--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@ input.main {
     background: red;
     color: white;
 }
-
 input.main:focus {
     box-shadow: 0 0 10px cyan;
 }
@@ -92,6 +91,31 @@ input.main:focus {
     border-bottom:1px solid #444;
     padding-bottom:5px;
 }
+
+
+.btn-reset {
+    width: 100%;
+    padding: 10px;
+    margin-top: 10px;
+    border: none;
+    border-radius: 10px;
+    background: linear-gradient(45deg,#ff4d6d,#ff758f);
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.btn-reset:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 15px #ff4d6d;
+}
+
+
+
+
+
+
 </style>
 </head>
 <body>
@@ -118,6 +142,11 @@ input.main:focus {
 
 <h3>Lịch sử</h3>
 <div class="history" id="history"></div>
+
+<button class="btn-reset" onclick="resetAll()">Reset</button>
+
+
+
 </div>
 
 
@@ -229,6 +258,18 @@ setTimeout(() => {
     
 }
 
+function resetAll() {
+    inputA.value = "";
+    inputB.value = "";
+
+    for (let i = 0; i < 5; i++) {
+        resultBox[i].textContent = "";
+        resultBox[i].classList.remove("highlight");
+    }
+
+    historyBox.innerHTML = ""; // nếu muốn xoá cả lịch sử
+    inputA.focus();
+}
 
 
 
@@ -277,7 +318,6 @@ function resetInputs(){
 
 </body>
 </html>
-
 
 
 
