--- a/index.html
+++ b/index.html
@@ -158,39 +158,42 @@ input.main:focus {
 
 <script>
 const ruleMap = {
-    "1": 2,
-    "2": 4,
-    "3": 3,
-    "4": 5,
-    "5": 1,
-    "1-2": 2,
-    "1-3": 3,
-    "1-4": 5,
-    "1-5": 4,
-    "2-3": 1,
-    "2-4": 3,
-    "2-5": 5,
-    "3-4": 2,
-    "3-5": 4,
-    "4-5": 1,
-    "1-2-3": 3,
-    "1-2-4": 4,
-    "1-2-5": 5,
-    "1-3-5": 1,
-    "1-3-4": 5,
-    "1-4-5": 5,
-    "2-4-5": 5,
-    "2-3-4": 2,
-    "2-3-5": 3,
-    "3-4-5": 4,
-    "1-2-3-4": 5,
-    "1-2-3-5": 1,
-    "1-2-4-5": 5,
-    "1-3-4-5": 5,
-    "2-3-4-5": 2,
-     "1-2-3-4-5": 2
-};
+    "1": [2,3],
+    "2": [4],
+    "3": [3],
+    "4": [5],
+    "5": [1],
 
+    "1-2": [2],
+    "1-3": [3],
+    "1-4": [5],
+    "1-5": [4],
+    "2-3": [1],
+    "2-4": [3],
+    "2-5": [5],
+    "3-4": [2],
+    "3-5": [4],
+    "4-5": [1],
+
+    "1-2-3": [3],
+    "1-2-4": [4],
+    "1-2-5": [5],
+    "1-3-5": [1],
+    "1-3-4": [5],
+    "1-4-5": [5],
+    "2-4-5": [5],
+    "2-3-4": [2],
+    "2-3-5": [3],
+    "3-4-5": [4],
+
+    "1-2-3-4": [5],
+    "1-2-3-5": [1],
+    "1-2-4-5": [5],
+    "1-3-4-5": [5],
+    "2-3-4-5": [2],
+
+    "1-2-3-4-5": [2]
+};
 
 function flip(bit){
     return bit === "0" ? "1" : "0";
@@ -244,9 +247,12 @@ function process(){
     let flipPos = null;
 
     if(ruleMap[key]){
-        flipPos = ruleMap[key];        // giữ lại vị trí lật
-        C[flipPos - 1] = flip(C[flipPos - 1]);
-    }
+    flipPos = ruleMap[key];   // giờ là mảng
+
+    flipPos.forEach(pos => {
+        C[pos - 1] = flip(C[pos - 1]);
+    });
+}
 
     displayResult(C, flipPos);
     saveHistory(A, B, C.join(""));
@@ -296,9 +302,9 @@ function displayResult(C, flipPos){
         box.className = "result-box";
         box.textContent = C[i];
 
-        if(flipPos && i === flipPos - 1){
-            box.classList.add("highlight");
-        }
+       if(flipPos && flipPos.includes(i + 1)){
+    box.classList.add("highlight");
+}
 
         resultBox.appendChild(box);
     }
