cập nhật tiêu đề.html

--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@ input.main:focus {
 
 
 <div class="container">
-<h2>So sánh 5 Bit</h2>
-
+<h2>A và B là 2 chuỗi 5 bit liên tiếp đứng cạnh nhau</h2>
+<h3> ví dụ 01234-56789, hoặc 56789-01234</h3>
 <div>
     A:<br>
     <input class="main" type="text" id="A" maxlength="5" inputmode="numeric">
@@ -138,7 +138,13 @@ input.main:focus {
     <input class="main" type="text" id="B" maxlength="5" inputmode="numeric">
 </div>
 
+
+
+
+
+
 <h3>Kết quả C</h3>
+
 <div id="result"></div>
 
 <h3>Lịch sử</h3>
