tăng kích thước input .html

--- a/index.html
+++ b/index.html
@@ -38,15 +38,18 @@ h2, h3 {
 
 
 input.main {
-    width: 50%;
-    padding: 12px;
-    font-size: 18px;
+    width: 60%;
+    padding: 10px;
+    font-size: 20px;
+    font-weight: bold;
+    font-family: monospace;
+    letter-spacing: 10px;
     text-align: center;
-    border-radius: 10px;
-    border: 2px solid #444;
+    border-radius: 12px;
+    border: 3px solid #222;
 
     outline: none;
-    margin-bottom: 15px;
+    margin-bottom: 20px;
     background: red;
     color: white;
 }
