--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ h2, h3 {
 input.main {
     width: 60%;
     padding: 10px;
-    font-size: 20px;
+    font-size: 25px;
     font-weight: bold;
     font-family: monospace;
     letter-spacing: 10px;
@@ -67,9 +67,10 @@ input.main:focus {
     height:45px;
     line-height:45px;
     margin:5px;
-    font-size:22px;
+    font-size: 25px;
+    font-weight: bold;
     border-radius:8px;
-    background:#2e2e45;
+    background:red;
 }
 
 .highlight{
@@ -98,14 +99,16 @@ input.main:focus {
 
 
 .btn-reset {
-    width: 100%;
+    width: 30%;
     padding: 10px;
     margin-top: 10px;
     border: none;
     border-radius: 10px;
     background: linear-gradient(45deg,#ff4d6d,#ff758f);
     color: white;
-    font-size: 16px;
+    font-size: 20px;
+    font-weight: bold;
+
     cursor: pointer;
     transition: 0.3s;
 }
@@ -185,7 +188,7 @@ const ruleMap = {
     "4-5": [2,3,5],
 
     "1-2-3": [2,3],
-    "1-2-4": [2,5],
+    "1-2-4": [3,5],
     "1-2-5": [3,4],
     "1-3-5": [2,4],
     "1-3-4": [2,5],
@@ -346,7 +349,6 @@ function resetInputs(){
 
 </body>
 </html>
-
 
 
 
