--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@ input.main:focus {
 .history{
     margin-top:30px;
     text-align:left;
-    max-width:400px;
+    max-width:60%;
     margin-left:auto;
     margin-right:auto;
     background:#2a2a40;
     padding:15px;
     border-radius:10px;
-    max-height:250px;
+    max-height:100px;
     overflow-y:auto;
     font-size:14px;
 }
@@ -349,6 +349,7 @@ function resetInputs(){
 
 </body>
 </html>
+
 
 
 
