đã cho lật bit tại D.html

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ function process(){
     }
 
     let key = match.join("-");
-    let C = B.split("");
+    let C = D.split("");
     let flipPos = null;
 
     if(ruleMap[key]){
@@ -374,6 +374,7 @@ function resetInputs(){
 
 </body>
 </html>
+
 
 
 
