--- a/index.html
+++ b/index.html
@@ -313,6 +313,7 @@ resetTimer = setTimeout(() => {
 
     inputA.value = "";
     inputB.value = "";
+    inputD.value = "";
 
     for (let i = 0; i < boxes.length; i++) {
         boxes[i].textContent = "";
@@ -374,6 +375,7 @@ function resetInputs(){
 
 </body>
 </html>
+
 
 
 
