--- a/index.html
+++ b/index.html
@@ -2,398 +2,82 @@
 <html lang="vi">
 <head>
 <meta charset="UTF-8">
-<title>So sánh 5 Bit</title>
+<title>Nhập 2 số tự xử lý</title>
+
 <style>
 body{
-    font-family: Arial, sans-serif;
+    font-family: Arial;
     background:#1e1e2f;
     color:white;
     text-align:center;
-    padding:30px;
+    padding:40px;
 }
 
-
-/* Hộp chính */
-.container {
-    background: rgba(255,255,255,0.05);
-    padding: 30px;
-    border-radius: 20px;
-    width: 380px;
-    backdrop-filter: blur(10px);
-    box-shadow: 0 0 20px rgba(0,255,255,0.2);
-    animation: glow 3s infinite alternate;
-    margin: 15px auto;
-}
-
-@keyframes glow {
-    from { box-shadow: 0 0 15px rgba(0,255,255,0.2); }
-    to { box-shadow: 0 0 30px rgba(0,255,255,0.5); }
-}
-
-h2, h3 {
-    text-align: center;
-    margin-bottom: 15px;
-}
-
-
-
-input.main {
-    width: 60%;
-    padding: 10px;
-    font-size: 25px;
-    font-weight: bold;
-    font-family: monospace;
-    letter-spacing: 10px;
-    text-align: center;
-    border-radius: 12px;
-    border: 3px solid #222;
-
-    outline: none;
-    margin-bottom: 20px;
-    background: red;
-    color: white;
-}
-input.main:focus {
-    box-shadow: 0 0 10px cyan;
-}
-
-
-
-
-
-.result-box{
-    display:inline-block;
-    width:45px;
-    height:45px;
-    line-height:45px;
-    margin:5px;
-    font-size: 25px;
-    font-weight: bold;
+input{
+    padding:12px;
+    font-size:24px;
+    width:120px;
+    text-align:center;
     border-radius:8px;
-    background:red;
+    border:none;
 }
 
-.highlight{
-    background:#00c896;
-    color:black;
+#message{
+    margin-top:20px;
+    font-size:18px;
+    font-weight:bold;
 }
-
-.history{
-    margin-top:30px;
-    text-align:left;
-    max-width:60%;
-    margin-left:auto;
-    margin-right:auto;
-    background:#2a2a40;
-    padding:15px;
-    border-radius:10px;
-    max-height:100px;
-    overflow-y:auto;
-    font-size:14px;
-}
-.history-item{
-    margin-bottom:8px;
-    border-bottom:1px solid #444;
-    padding-bottom:5px;
-}
-
-
-.btn-reset {
-    width: 30%;
-    padding: 10px;
-    margin-top: 30px;
-    border: none;
-    border-radius: 10px;
-    background: linear-gradient(45deg,#ff4d6d,#ff758f);
-    color: white;
-    font-size: 20px;
-    font-weight: bold;
-
-    cursor: pointer;
-    transition: 0.3s;
-}
-
-.btn-reset:hover {
-    transform: scale(1.05);
-    box-shadow: 0 0 15px #ff4d6d;
-}
-
-
-
-
-
-
 </style>
 </head>
 <body>
 
-
-
-
-
-<div class="container">
-<h2>A và B là 2 chuỗi 5 bit liên tiếp đứng cạnh nhau</h2>
-<h3> ví dụ 01234-56789, hoặc 56789-01234</h3>
-
-
-
-<div>
-    A:<br>
-    <input class="main" type="text" id="A" maxlength="5" inputmode="numeric">
-</div>
-<br>
-
-<div>
-    D:<br>
-    <input class="main" type="text" id="D" maxlength="5" inputmode="numeric" readonly>
-</div>
-
-
-<div>
-    B:<br>
-    <input class="main" type="text" id="B" maxlength="5" inputmode="numeric" readonly>
-</div>
-
-
-
-
-
-<h3>Kết quả C</h3>
-
-<div id="result"></div>
-
-<h3>Lịch sử</h3>
-<div class="history" id="history"></div>
-
-<button class="btn-reset" onclick="resetAll()">Reset</button>
-
-
-
-</div>
-
-
-
-
-
-
+<h2>Nhập 2 số</h2>
+<input type="text" id="numberInput" maxlength="2" placeholder="VD: 14">
+<div id="message"></div>
 
 <script>
-const ruleMap = {
-    "1": [2,3,5],
-    "2": [2,5],
-    "3": [1,4],
-    "4": [1,2],
-    "5": [2,5],
 
-    "1-2": [2,3],
-    "1-3": [1,3],
-    "1-4": [2,3],
-    "1-5": [3],
-    "2-3": [2,3,5],
-    "2-4": [3,5],
-    "2-5": [2,4],
-    "3-4": [2,4],
-    "3-5": [1,5],
-    "4-5": [2,5],
+const group0 = [0,2,5,7,11,14,16,58];
+const group1 = [1,4,6,9,13,17];
+const skipGroup = [3,8];
 
-    "1-2-3": [3,5],
-    "1-2-4": [3],
-    "1-2-5": [2,4],
-    "1-3-5": [2,4],
-    "1-3-4": [2,5],
-    "1-4-5": [2,4],
-    "2-4-5": [2,4,5],
-    "2-3-4": [1,5],
-    "2-3-5": [1,4],
-    "3-4-5": [1,2],
+const input = document.getElementById("numberInput");
+const message = document.getElementById("message");
 
-    "1-2-3-4": [3],
-    "1-2-3-5": [2,5],
-    "1-2-4-5": [2,4,5],
-    "1-3-4-5": [3],
-    "2-3-4-5": [2,4,5],
-
-    "1-2-3-4-5": [3,5],
-    "": [2,5]
-
+window.onload = function(){
+    input.focus();
 };
 
+input.addEventListener("input", function(){
 
-function flip(bit){
-    return bit === "0" ? "1" : "0";
-}
+    let value = input.value.replace(/\D/g,""); // chỉ cho nhập số
+    input.value = value;
 
-const inputA = document.getElementById("A");
-const inputD = document.getElementById("D");
-const inputB = document.getElementById("B");
-const resultBox = document.getElementById("result");
-const historyBox = document.getElementById("history");
+    if(value.length === 2){
 
-let hasFirstInput = false;
+        let num = parseInt(value);
 
-window.onload = () => {
-    inputA.focus();
-};
-
-function cleanInput(input){
-    input.value = input.value.replace(/[^01]/g, "");
-}
-
-inputA.addEventListener("input", () => {
-    cleanInput(inputA);
-
-    if(inputA.value.length === 5){
-
-        if(!hasFirstInput){
-            // Lần đầu → A sang D
-            inputD.value = inputA.value;
-            hasFirstInput = true;
-        } else {
-            // Lần sau → D sang B, A sang D
-            inputB.value = inputD.value;
-            inputD.value = inputA.value;
-
-            process(); // So D với B
+        if(group0.includes(num)){
+            message.textContent = num + " thuộc nhóm 0";
+        }
+        else if(group1.includes(num)){
+            message.textContent = num + " thuộc nhóm 1";
+        }
+        else if(skipGroup.includes(num)){
+            message.textContent = num + " bị bỏ qua";
+        }
+        else{
+            message.textContent = num + " không thuộc nhóm nào";
         }
 
-        inputA.value = "";
+        // reset để nhập tiếp
+        input.value = "";
+        input.focus();
     }
+
 });
-
-
-
-
-function process(){
-    let D = inputD.value;
-    let B = inputB.value;
-
-    if(D.length !== 5 || B.length !== 5) return;
-
-    let match = [];
-    for(let i=0;i<5;i++){
-        if(D[i] === B[i]){
-            match.push(i+1);
-        }
-    }
-
-    let key = match.join("-");
-    let C = D.split("");
-    let flipPos = null;
-
-    if(ruleMap[key]){
-    flipPos = ruleMap[key];   // giờ là mảng
-
-    flipPos.forEach(pos => {
-        C[pos - 1] = flip(C[pos - 1]);
-    });
-}
-
-    displayResult(C, flipPos);
-    saveHistory(D, B, C.join(""));
-   
-
-setTimeout(() => {
-    resetInputs();
-}, 500); // 0.5 giây
-
-    
-}
-
-
-
-
-function resetAll() {
-
-   let resetTimer = null; // khai báo bên ngoài
-
-resetTimer = setTimeout(() => {
-    resetInputs();
-}, 500);
-
-    const boxes = resultBox.children;
-
-    inputA.value = "";
-    inputB.value = "";
-    inputD.value = "";
-
-    for (let i = 0; i < boxes.length; i++) {
-        boxes[i].textContent = "";
-        boxes[i].classList.remove("highlight");
-    }
-
-    historyBox.innerHTML = "";
-
-    inputA.focus();
-}
-
-
-
-
-
-
-
-function displayResult(C, flipPos){
-    resultBox.innerHTML = "";
-
-    for(let i=0;i<5;i++){
-        let box = document.createElement("div");
-        box.className = "result-box";
-        box.textContent = C[i];
-
-       if(flipPos && flipPos.includes(i + 1)){
-    box.classList.add("highlight");
-}
-
-        resultBox.appendChild(box);
-    }
-}
-
-
-
-
-
-
-
-
-
-
-function saveHistory(D, B, C){
-    let item = document.createElement("div");
-    item.className = "history-item";
-    item.textContent = `D: ${D} | B: ${B} → C: ${C}`;
-    historyBox.prepend(item);
-}
-
-function resetInputs(){
-    inputA.value = "";
-    inputA.focus();
-}
-
-
-
 
 </script>
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
