--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@ input.addEventListener("input", function(){
         let num = parseInt(value);
 
         if(group0.includes(num)){
-            message.textContent = num + " thuộc nhóm 0";
+            message.textContent =" Gặp"+ num + " dùng số 0";
         }
         else if(group1.includes(num)){
-            message.textContent = num + " thuộc nhóm 1";
+            message.textContent = " Gặp"+ num + " dùng số 1";
         }
         else if(skipGroup.includes(num)){
-            message.textContent = num + " bị bỏ qua";
+            message.textContent = " Gặp"+ num + " hãy bỏ qua";
         }
         else{
             message.textContent = num + " không thuộc nhóm nào";
